docs(nexus): rewrite spec + plan around app-template + Traefik TLS
Major revision post-research. Drops Sonatype's deprecated chart and
Jetty native TLS in favor of bjw-s-labs/app-template (repo convention),
Traefik TLS termination with ZeroSSL, plain HTTP inside cluster,
CoreDNS rewrite via Talos extraManifests, .lan.EXTERNAL_DOMAIN
subdomain per repo convention, configMapGenerator-hashed provisioning
Job, 4 apt passthrough proxies, and nx-metrics-all granted to anonymous
for VMPodScrape.

Removes: Jetty TLS config task, PKCS12 keystore secret, multi-port
service hack, IngressRouteTCP / passthrough entrypoint.

Ref #968

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>